--- a/test-extension/tab.html
+++ b/test-extension/tab.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Test Tab</title>
+    <script src="../src/omnilog.js"></script>
+    <script src="tab.js"></script>
+  </head>
 
-<head>
-  <title>Test Tab</title>
-  <script src="../src/omnilog.js"></script>
-  <script src="tab.js"></script>
-</head>
-
-<body>
-</body>
-
+  <body></body>
 </html>
