feat: dom-based logger with improved rendering

--- a/omnilog.html
+++ b/omnilog.html
@@ -11,15 +11,10 @@
     <title>Omnilog</title>
     <style>
       body,
-      html {
+      html, #app {
         height: 100%;
         margin: 0;
         box-sizing: border-box;
-      }
-
-      #app {
-        /* 100% - 0.1% to accommodate a tiny bit of scrollbar*/
-        height: 99.9%;
       }
     </style>
   </head>
